# shiny-sales-dashboard

./: .gitignore  Dockerfile  README.md  app.py  heroku.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
data/: .~lock.supermarket_sales.xlsx#
utils/: plotter.py  processor.py
www/ga/: analytics.html
