[project]
name = "shiny-sales-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faicons>=0.2.2",
    "openpyxl==3.1.5",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "rsconnect-python>=1.28.2",
    "shiny==1.5.1",
    "shinywidgets>=0.7.1",
]

[project.optional-dependencies]
deploy = [
    "tbx",
]

[tool.pyright]
typeCheckingMode = "off"

[tool.uv.sources]
tbx = { git = "https://github.com/Rasheed19/tbx.git" }
